<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:paddingTop="8dp"
        android:singleLine="true"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ad_unit_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:singleLine="true"
        android:textColor="?android:attr/textColorSecondary"
        android:textSize="14sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/keywords_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/keywords"
        android:imeOptions="actionDone"
        android:inputType="text|textFilter|textShortMessage"
        android:singleLine="true" />

    <EditText
        android:id="@+id/user_data_keywords_field"
        android:hint="@string/user_data_keywords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textFilter|textShortMessage"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <EditText
        android:id="@+id/custom_data_field"
        android:visibility="gone"
        android:hint="@string/custom_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textFilter|textShortMessage"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/load_button"
            android:text="@string/load_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/show_button"
            android:text="@string/show_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <EditText
        android:id="@+id/gameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/game_id"
        android:inputType="textPersonName"
        android:text="1092453" />

    <Button
        android:id="@+id/init_ads"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/initialize" />

    <EditText
        android:id="@+id/rewarded_placement_id_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/rewarded_placement_id"
        android:inputType="textPersonName"
        android:text="rewardedVideo" />

    <Button
        android:id="@+id/play_rewarded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_rewarded_ad" />
</LinearLayout>
